# RandomNumberGenerator

./: .cproject  .project  CMakeLists.txt  MakeFile  README.md  array.txt  h01.cpp  hw01.h  hw01.scr  print_array.cpp  prt_header.cpp  reverse_digits.cpp  save_array.cpp  sort_array.cpp  sum_digits.cpp  triple_number.cpp
Debug/: CS1C h01  h01.d  makefile  print_array.d  prt_header.d  reverse_digits.d  save_array.d  sort_array.d  subdir.mk  sum_digits.d  triple_number.d
